fixed scrollbars

--- a/theme.css
+++ b/theme.css
@@ -2963,9 +2963,9 @@ body:not(.setting-item-title-icon-remove):not(.is-phone) .vertical-tab-header-gr
 
 /* .𖥔 ݁ ˖  turn off scrollbar on leftside pane in settings ⊹ ࣪ ˖
 */
-.mod-settings .vertical-tab-header::-webkit-scrollbar {
+/* .mod-settings .vertical-tab-header::-webkit-scrollbar {
     display: none;
-}
+} */
 
 /* .𖥔 ݁ ˖  horizontal line (*** or ---) ⊹ ࣪ ˖
 */
@@ -5964,7 +5964,7 @@ body .markdown-preview-view a.tag:hover {
 /* .𖥔 ݁ ˖  the thumb (handle) ⊹ ࣪ ˖ 
 */
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(var(--mono-rgb-100), 0.15) !important;
+    background-color: rgba(var(--color-accent), 0.15) !important;
 
     border: 5px solid transparent;
     background-clip: content-box;
@@ -5976,7 +5976,7 @@ body .markdown-preview-view a.tag:hover {
 /* .𖥔 ݁ ˖  hover interaction ⊹ ࣪ ˖ 
 */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(var(--mono-rgb-100), 0.4) !important;
+    background-color: rgba(var(--color-accent), 0.4) !important;
     border-width: 3px; 
 }
 
